--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
+    "rewrites": [{ "source": "/v1/(.*)", "destination": "/v1" }]
+
 }
