--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
-    "rewrites": [{ "source": "/v1/(.*)", "destination": "/v1" }]
-
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "src/index.js",
+        "use": "@now/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "src/index.js"
+      }
+    ]
+  }
