vercel config changed

--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.1",
   "private": "false",
   "description": "",
-  "main": "src/index.js",
+  "source": "src/index.js",
+  "main": "dist/index.js",
   "author": "Korhan ÖZBEK<korhanozbek44@gmail.com>",
   "license": "MIT",
   "engines": {
     "node": ">=12.0.0"
   },
   "scripts": {
+    "build": "parcel build",
     "start": "pm2 start ecosystem.config.json --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "test": "jest -i --colors --verbose --detectOpenHandles",
@@ -61,6 +63,7 @@
     "husky": "^7.0.0",
     "jest": "^26.0.1",
     "lint-staged": "^11.0.0",
+    "parcel": "^2.8.3",
     "node-mocks-http": "^1.8.0",
     "nodemon": "^2.0.0",
     "prettier": "^2.0.5",
